--- a/socket.html
+++ b/socket.html
@@ -1,22 +1,22 @@
 <html>
-  <head>
-  	 <script src="/socket.io/socket.io.js"></script>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
-  </head>
-  <body>
-   <script>
-      var socket = io.connect();
+<head>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
+</head>
+<body>
+  <script>
+  var socket = io.connect();
+  socket.on('date', function(data){
+    $('#date').text(data.date);
+  });
 
-	socket.on('message', function(data){
-	    console.log(data.message);
-	});
   $(document).ready(function(){
     $('#text').keypress(function(e){
       socket.emit('client_data', {'letter': String.fromCharCode(e.charCode)});
     });
   });
-   </script>
-   This is our sockethtml file
-   <textarea id="text"></textarea>
-   </body>
+  </script>
+  <div id="date"></div>
+  <textarea id="text"></textarea>
+</body>
 </html>
