--- a/old/inventory.html
+++ b/old/inventory.html
@@ -9,14 +9,14 @@
     <title>Inventory</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="app.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/jquery-3.2.1.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand menu-top-head" href="home.html">
+          <a class="navbar-brand menu-top-head" href="/">
             <div class="fa fa-triples">
             <span class="brand-word">Ts</span></div>
           </a>
@@ -39,7 +39,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="inventory.html" class="menu-top-head">Inventory</a></li>
+            <li><a href="/inventory" class="menu-top-head">Inventory</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle menu-top-head" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-o"></i> <span class="caret"></span></a>
               <ul class="dropdown-menu">
